--- a/index.html
+++ b/index.html
@@ -147,7 +147,8 @@ if (isIphone) {
 	<script>
 		var canvasVideo = new CanvasVideoPlayer({
 			videoSelector: '.js-video',
-			canvasSelector: '.js-canvas'
+			canvasSelector: '.js-canvas',
+			framesPerSecond: 60
 		});
 	</script>
 </body>
