--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	</div>
 	<div class="video-wrapper js-video-wrapper">
 		<div class="video-responsive">
-			<video class="video js-video" autoplay muted>
+			<video class="video js-video" muted>
 				<source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.webm" type="video/webm">
 				<source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.mp4" type="video/mp4">
 				<source src="http://www.quirksmode.org/html5/videos/big_buck_bunny.ogg" type="video/ogg">
@@ -125,6 +125,10 @@ if (isIphone) {
 			canvasSelector: '.js-canvas',
 			framesPerSecond: 60
 		});
+		setTimeout(function(){
+			$('video')[0].play()
+		}, 5000);
+		
 	</script>
 </body>
 </html>
