--- a/index.html
+++ b/index.html
@@ -125,9 +125,9 @@ if (isIphone) {
 			canvasSelector: '.js-canvas',
 			framesPerSecond: 60
 		});
-		setTimeout(function(){
-			$('video')[0].play()
-		}, 5000);
+		// setTimeout(function(){
+		// 	$('video')[0].play()
+		// }, 5000);
 		
 	</script>
 </body>
